style.css
/* ====================
  Initial Declarations
======================= */


@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,100;1,400;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');

*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

:root {
    --main:#2b6777;
    --lightMain:#c8d8e4;
    --linkDark:#52AB98;
    --lightBackground:#ffffff;
    --Breaker:#f2f2f2;
    --mainTextColor:#000000;
    --hamburgerMenuBg:#fcfcfc;
    --footer:#000000;
    --footerTextBold:#e2e2e2;
    --footerTextLight:#f2f2f296;
    --socialbg:#0A2342;
    --socialbody:#1a1515;
    --buttons:#cad621;
    --sectiontwo:#dfdfdf42;
    --links:#f0f0f0;
    --linkslight:#227c9d;
    --gradient-box-w: linear-gradient(145deg, #d1d1d1, #ffffff)
}

/* =============
    Typography 
=============== */
html{
  font-size: 10px;
}

body {
  margin: 0 auto;
  padding: 0;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  letter-spacing: .15rem;
  line-height: 1.8;
  overflow-x: hidden;
}

h1, h2, h3, h4, h5, h6{
  margin: 0;
}

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 1.8rem;
}

h3{
  font-size: 1.3rem;
}

h4{
  font-size: 1.1rem;
}

p {
  font-size: 1rem;
}

.mobile_list a {
  font-size: 1.3rem;
}

.featured_container h1{
  font-size: 1.6rem;
}




/* =============
     Layout
=============== */


/* =============
   Hamburger Menu
=============== */

.mobile_nav {
  text-align: left;
  background:white;
  position: relative;
  width: 100%;
  padding: .5rem;
  z-index: 99999;
  font-family: 'Montserrat', sans-serif;
}

.mobile_list {
  position:absolute;
  text-align: left;
  margin-left: 1rem;
  top: 100%;
  right: 0; 
  opacity: 1;
  background:var(--hamburgerMenuBg);
  width: 100%;
  transform: scale(1, 0);
  transform-origin: top;
  transition: transform 400ms ease-in-out;
}

.mobile_list ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  margin-top: 1rem;
  margin-left: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.mobile_list li {
  padding: 1rem;
}

.mobile_list a {
  text-decoration: none;
  color: var(--mainTextColor);
  opacity: 0;
  transition: opacity 150ms ease-in-out;    
  font-weight: 900;
  text-transform: uppercase;
  
}

.mobile_nav a:hover :focus {
  color: white;
}

.nav_toggle:checked ~ .mobile_list {
 transform: scale(1, 1);
}

.nav_toggle:checked ~ .mobile_list a {
 opacity: 1;
 transition: opacity 500ms ease-in-out 100ms;
}

.nav_toggle:checked ~ .nav-toggle-label {
  display: none;
}

.nav_toggle:checked ~ .nav-toggle-close {
  display: block;
}

.nav_toggle {
 display: none;
}

.nav-toggle-close {
  position: absolute;
  top: 35%;
  right: 5px;
  margin-right: 1rem;
  height: 100%;
  display: none;
  cursor: pointer;
 }

.nav-toggle-label {
 position: absolute;
 top: 0;
 right: 0;
 margin-right: 1.5rem;
 height: 100%;
 display: flex;
 align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after{
   position: relative;
   width: 3.5rem;
   height: .4rem;
   background-color: var(--mainTextColor);
   right: 0;
   cursor: pointer;
}
.nav-toggle-label span::before,
.nav-toggle-label span::after {
 content: '';
 position: absolute;
 margin: .3rem 0;
}

.nav-toggle-label span::after{
   top: .5rem;
}

.nav-toggle-label span::before{
   bottom: .5rem;
}

.list_img{
  width: 22px;
  margin-right: 1rem;
}


/* 
Mobile Social Media Icons 
*/

.social_mobile{
  width: 60%;
  max-width: 400px;
  display: flex;
  justify-content: space-evenly;
  margin: 3rem auto;
}

.social_mobile{
  opacity: 0;
}

.nav_toggle:checked ~ .mobile_list .social_mobile {
  opacity: 1;
}

.social_width{
  width: 35px;
}

.social_icon{
  fill: var(--mainTextColor);
}

.social_icon--bg{
  fill: var(--hamburgerMenuBg);
}



/* =============
    featured 
=============== */

.featured_container{
  width: 100%;
  height: 40vh;
  background: linear-gradient( rgba(0, 0, 0, 0.61), rgba(3, 0, 0, 0.5) ), url('img/slide1.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position:center;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 4rem;
  padding: 5rem;
  text-transform: capitalize;
  font-weight: 700;
}


.featured_btn {
  width: 310px;
  display: flex;
  justify-content: space-between;
  margin: 3rem;
  text-align: center;
  cursor: pointer;
}

.consult_btn{
  background-color: var(--main);
  border-radius: 20px;
  padding: 1rem;
  width: 150px;
}

.f_contact{
  color: var(--main);
  background-color: white;
  border: 1px solid var(--main);
}

/* =============
    Achievements 
=============== */

.achieve_container{
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  margin-bottom: 5rem;
}

.achieve{
  width: 30%px;
  display: flex;
  padding: 2rem;
}

.achieve_icon{
  width: 60px;
  margin-right: 2rem;
}

.achieve_icon--chg{
  fill: var(--main);
}

.achieve_content{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#achieve_numbers{
   color: var(--linkDark);
}

#achieve_consults{
  color: var(--buttons);
}

#achieve_visa{
  color: var(--linkslight);
}


/* =============
    About Us 
=============== */

.aboutus{
  max-width:1200px;
  margin: 0 auto;
  padding: 3rem;
  margin-bottom: 5rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 1.5rem;
}

.aboutus_title{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
}

.aboutus__container {
  height: 250px;
  border-radius: 10px;
  margin: 1rem;
  box-shadow: rgba(145, 145, 145, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
  background-color: var(--gradient-box-w);
  position: relative;
}
/* ... */

